fix trigger